# opengl

fader/: CMakeLists.txt  GLFaderWidget.cpp  GLFaderWidget.h  fader.f.glsl  fader.v.glsl  main.cpp  naive-perspective.v.glsl  perspective-projection.v.glsl  rotation.v.glsl  view-fustrum-rotation.v.glsl  window-scaled-rotation.v.glsl
flag/: CMakeLists.txt  FlagMesh.cpp  FlagMesh.h  FlagVertex.h  GLFlagWidget.cpp  GLFlagWidget.h  GLMesh.cpp  GLMesh.h  GLProgram.cpp  GLProgram.h  GLVertexAttrib.h  GLWidget.cpp  GLWidget.h  PaddedQVector3D.h  main.cpp
